Examples/Examples/AdmissionController/k8s/webhook-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: webhook
  name: webhook
spec:
  finalizers:
    - kubernetes
---
