Examples/Examples/AdmissionController/k8s/webhook-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: admission-server
  namespace: webhook
spec:
  selector:
    app: admission-server
  ports:
    - port: 443
      targetPort: 8443
---
